--- a/ui/html/index.html
+++ b/ui/html/index.html
@@ -230,7 +230,7 @@
       </div>
     </main>
   </div>
-  <script src="/cli.js"></script>
+  <script src="/cli.js?v=2"></script>
 </body>
 
 </html>
